IDL_FILES = \
	GNOME_Database.idl \
	GNOME_Database_Connection.idl \
	GNOME_Database_Command.idl \
	GNOME_Database_Error.idl \
	GNOME_Database_Field.idl \
	GNOME_Database_Listener.idl \
	GNOME_Database_Recordset.idl \
	GNOME_Database_Parameter.idl

EXTRA_DIST = \
	$(IDL_FILES)

idldir=$(prefix)/share/idl
idl_DATA=$(IDL_FILES)
